--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^0.15.0",
     "gulp-open": "^1.0.0",
+    "gulp-sourcemaps": "^1.6.0",
     "jquery": "^2.1.4",
     "object-assign": "^3.0.0",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
